# agave

./: .dockerignore  .env  Cargo.toml  Docker-compose.yml  Dockerfile  LICENSE  app.rs  compose.yaml  docker-compose.yaml
.docker/: docker-compose.yaml
backend/: Cargo.toml  Dockerfile  Dockerfile.dev
backend/api/yahoo/: yahoo_api.rs
backend/src/: main.rs  postgres.rs  user.rs  ws.rs
backend/src/services/: yahoo_finance.rs
frontend/: Dockerfile  Dockerfile.dev  package-lock.json  package.json  vite.config.js
frontend/src/: App.js  App.jsx  index.jsx  setupProxy.jsx
frontend/src/component/: DataFetcher.jsx  StockTicker.js  api.jsx
react-app/: package-lock.json  package.json
src/: main.rs
